# python-erc20

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/erc_20/: __init__.py  core.py  exceptions.py
