[project]
name = "erc-20"
dynamic = ["version"]
description = "Effortlessly interact with ERC-20 contracts in Python"
authors = [
    { name = "Xurvan", email = "xurvan@tutanota.com" },
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.pdm.version]
source = "file"
path = "erc_20/__init__.py"
