[project]
name = "erc-20"
dynamic = ["version"]
description = "Effortlessly interact with ERC-20 contracts in Python"
authors = [
    { name = "Xurvan", email = "xurvan@tutanota.com" },
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["blockchain", "web3", "ethereum", "erc20", "cryptocurrency"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"
